# dataviz-llm-app

./: Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
dataviz_backend/: main.py
dataviz_backend/agents/: code_generator.py  data_analyst.py  viz_strategist.py
tests/: test2.csv
